--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/dd7be45cd4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="nav">
-        <img src="assets/banana-logo.jpg" alt="banana-pic" class="logo-pic">
-        <div class="companyLogo"> Banana-Builds</div>
+        <img src="assets/icons/png/logo-social.png" alt="banana-pic" class="logo-pic">
+        <div class="companyLogo"> Example...</div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -28,6 +27,30 @@
             </ul>
         </div>
     </nav>
+    <h1 class="title">Weather App</h1>
+    <section class="enter-location">
+        <input type="search" placeholder="Enter a location..." id="location-search" title="enter town or city">
+    </section>
+    <main class="output">
+        <div class="weather-icon">
+            <img src="#" alt="weather-icon" class="icon">
+       </div>
+       <div class="loader"></div>  
+       <div class="info">
+            <p class="place">location here</p>
+            <p class="description">description<span class="weath-descript"></span></p>
+            <p class="temp"> Temperature: <span class="temp-val">&#8451;</span> </p> 
+            <p class="humid">Humidity: <span class="humid-val">%rh</span></p>
+            <p class="airpress"> Air-pressure: <span class="airpress-val"></span></p>
+            <p class="wind">Wind-speed: <span class="windspeed-val"> m/s (meters per second)</span></p>
+            <p class="sunrise">Sunrise: <span class="sunset-time"></span></p>
+            <p class="sunset">Sunset: <span class="sunset-time"></span></p>
+            <button class="metric">metric/imperial</button>
+       </div>
+       <div id="openweathermap-widget-11"></div>
+    </main>
     <script src="./javascript/index.js"></script>
 </body>
 </html>
+
+
