updated html and styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="mobileStyle.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -40,13 +40,14 @@
        <div class="loader"></div>  
        <div class="info">
             <p class="place">location here</p>
-            <p class="description">description<span class="weath-descript"></span></p>
-            <p class="temp"> Temperature: <span class="temp-val">&#8451;</span> </p> 
-            <p class="humid">Humidity: <span class="humid-val">%rh</span></p>
-            <p class="airpress"> Air-pressure: <span class="airpress-val"></span></p>
-            <p class="wind">Wind-speed: <span class="windspeed-val"> m/s (meters per second)</span></p>
-            <p class="sunrise">Sunrise: <span class="sunset-time"></span></p>
-            <p class="sunset">Sunset: <span class="sunset-time"></span></p>
+            <p class="timeNow">day<span class="tNow"></p>
+            <p class="description">description</p>
+            <p class="temp"> Temperature:</p> 
+            <p class="humid">Humidity:</p>
+            <p class="airpress"> Air-pressure:</p>
+            <p class="wind">Wind-speed:</p>
+            <p class="sunrise">Sunrise:</p>
+            <p class="sunset">Sunset:</p>
             <button class="metric">metric/imperial</button>
        </div>
     </main>
