--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
     <nav class="navbar">
@@ -50,6 +51,22 @@
             <p class="sunset">Sunset:</p>
             <button class="metric">metric/imperial</button>
        </div>
+       <div class="weekly-container">
+        <div class="dayOne">
+            <img src="#" class="weekIcon" alt="weather-icon">
+            <p class="dayDate"></p>
+            <p class="maxTemp"></p>
+            <p class="min-temp"></p>
+            <p class="weekDescription"></p>
+        </div>
+        <div class="dayTwo">
+            <img src="#" class="weekIcon" alt="weather-icon">
+            <p class="dayDate"></p>
+            <p class="maxTemp"></p>
+            <p class="min-temp"></p>
+            <p class="weekDescription"></p>
+        </div>
+    </div>
     </main>
     <script src="./javascript/index.js"></script>
 </body>
