--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </div>
     </div>
     </main>
+    <script src="./config.js"></script>
     <script src="./javascript/index.js"></script>
 </body>
 </html>
